Changed image access screen size to prevent labels collapse

--- a/src/main/webapp/app/home/home.css
+++ b/src/main/webapp/app/home/home.css
@@ -29,8 +29,8 @@ table.table tr.selected td {
 }
 
 .image-access-modal .modal-dialog {
-  width: 50vw; 	
-  max-width: 50vw;
+  width: 52vw; 	
+  max-width: 52vw;
 }
 
 .bookmarks-modal .modal-dialog {
